skin/css/admin/admin.css
/* ... */
/* End System-Configuration */

/* Start CMS-Blocks, CMS-Pages */
.col-block-id, .col-page-id {width: 50px;}
.col-block-username, .col-page-username {width:180px;}
.col-block-date, .col-page-date {width: 250px;}
.col-blockt-state, .col-page-state, .col-page-home {width: 80px;}
.col-block-action, .col-page-action {width: 120px;}
#cms-block-new, #cms-page-new {
    width: 500px;
    margin: 20px auto;
    padding: 40px 10px;
}
#cms-block-new a, #cms-page-new a {
    margin: 0 auto;
}
#cms-page-editor .flex-2 > div {
    padding: 0;
}
#cms-block-editor-element > div {
    margin: 0 auto;
}
#cms-block-popup {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 10px;
}
#cms-block-popup div.fa-3x {
    margin: 30px auto;
    width: fit-content;
}
#cms-block-popup h2 {
    grid-column: span 2;
    margin: 20px 0 10px 0;
    text-decoration: underline;
}
#cms-block-popup .popup-block {
    background: var(--gridster-block-background);
    cursor: pointer;
    padding: 10px;
    border: 2px solid transparent;
}
#cms-block-popup .popup-block:hover,
#cms-block-popup .popup-block:active {
    border-color: var(--gridster-border-color);
}
#cms-block-popup .popup-block.block-selected {
    border-color: var(--gridster-block-selected);
}
/* End CMS-Blocks, CMS-Pages */

/* Start Gridster */
#cms-page-header ul,
#cms-page-footer ul {
    height: 195px;
}
#cms-page-content ul {
    min-height: 800px;
}
.gridster {
    margin-top: 20px;
}
.gridster ul {
    list-style-type: none;
    background-color: var(--gridster-background);
    border: 2px solid var(--gridster-border-color);
    margin: 0 auto;
    min-width: 1170px;
}
.cms-page-layout-block {
    background: var(--gridster-block-background);
    cursor: pointer;
}
.cms-page-layout-block .block-navbar {
    background-color: var(--gridster-toolbar-background);
    height: 32px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 3px;
}
.cms-page-layout-block[data-sizex="1"] .block-number-pre {
    display: none;
}
.cms-page-layout-block .block-number {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.cms-page-layout-block .block-navbar .button {
    background-color: #182227;
    font-weight: bold;
    line-height: 15px;
    text-decoration: none;
    margin: 0;
    padding: 6px;
}
.cms-page-layout-block .block-content {
    display: block;
    margin: 5px;
    text-align: left;
}
/* End Gridster */

/* Start Popup */
.edit-popup {
    display: none;

    &.active {
        display: initial;
        position: fixed;
        width: 100%;
        height: 100%;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        background-color: rgba(0,0,0,0.8);
        z-index: 2;
    }
}
.edit-popup-first-row .elment-block {
    padding: 0 10px;
}
.edit-popup > div {
    width: 1000px;
    margin: 10% auto 0 auto;
    background-image: var(--admin-background-image);
    padding: 20px;
    border-radius: 10px;
}
.edit-popup button {
    margin: 0;
}
/* End Popup */

/* Start Sortable List */
.sortable-container {
    width: max(90%, 1000px);
    margin: 20px auto 0 auto;
    padding: 20px;
}
.sortable-list {
    width: max(90%, 1000px);
    margin: 20px auto 0 auto;
    padding: 20px;
    border-radius: 3px;
    min-height: 50px;
}
.sortable-list, .sortable-list li > ul {
    background: var(--sortable-list-background);
    border: 2px solid var(--sortable-list-border-color);
    padding: 10px;
    width: 100%;
}
.sortable-list .item-disable {
    font-style: italic;
}
.sortable-list .button {
    margin: 0;
}
.sortable-list li {
    background: var(--sortable-list-item-background);
    list-style-type: none;
    display: flex;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
    line-height: 4rem;
}
.sortable-list li:not(:last-child) {
    margin-bottom: 5px;
}
.sortable-list li:before {
    font-family: "Font Awesome 6 Free";
    font-style: normal;
    text-decoration: none;

}
.sortable-list li:before {
    background: var(--sortable-list-item-background);
    content: "\f58e";
    padding: 23px 15px;
    cursor: pointer;
    line-height: 1rem;
}
.sortable-list li > span:nth-child(2) {
    margin-left: auto;
    text-align: left;
    width: 500px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.sortable-list li > span:nth-child(3) {
    width: 250px;
    text-align: center;
    line-height: 1rem;
}
.sortable-list li > ul {
    margin: 10px 10px 10px 30px;
    border-width: 1px;
    min-height: 20px;
}
.sortable-list > li.item-disable,
.sortable-list ul > li.item-disable {
    font-style: italic;
    text-decoration: line-through;
}
.sortable-list li a {
    font-family: "Font Awesome 6 Free";
    font-size: 2rem;
    font-style: normal;
    line-height: 2rem;
    text-decoration: none;
    width: 55px;
    height: 45px;
    display: inline-block;
    text-align: center;
    margin: 10px 25px 10px 0;
    border-radius: 3px;
    border: 1px solid transparent;
    padding: 5px;
}
.sortable-list > li a.sort-item-change-state,
.sortable-list ul > li a.sort-item-change-state {
    border-color: var(--color-okay-font);
    color: var(--color-okay-font);
    background: var(--color-okay-back);
}
.sortable-list > li a.sort-item-change-state:before,
.sortable-list ul > li a.sort-item-change-state:before {
    content: "\f205";
}
.sortable-list > li.item-disable a.sort-item-change-state,
.sortable-list ul > li.item-disable a.sort-item-change-state {
    border-color: var(--color-fail-font);
    color: var(--color-fail-font);
    background: var(--color-fail-back);
}
.sortable-list > li.item-disable a.sort-item-change-state:before,
.sortable-list ul > li.item-disable a.sort-item-change-state:before {
    content: "\f204";
}
/* ... */

